# twitter-clone

./: .gitignore  README.md
backend/: api.py  github_controller.py  main.py  pyproject.toml  users_controller.py
backend/routers/: github_controller.py  session_controller.py  users_controller.py
backend/src/sqlapp/: crud.py  database.py  models.py  schemas.py
frontend/twitter-clone-ui/: package-lock.json  package.json  tailwind.config.ts
frontend/twitter-clone-ui/src/app/: globals.css  layout.tsx  page.tsx
frontend/twitter-clone-ui/src/app/components/: auth-button.tsx  buttons.tsx
frontend/twitter-clone-ui/src/app/components/client/: auth-button-client.tsx  buttons.tsx  footers.tsx  modals.tsx  tooltips.tsx
frontend/twitter-clone-ui/src/app/components/server/: auth-button-server.tsx
frontend/twitter-clone-ui/src/app/components/server/helpers/: users-auth.tsx
frontend/twitter-clone-ui/src/app/login/: page.tsx
frontend/twitter-clone-ui/src/helpers/: users-auth.tsx
